css align fix

--- a/css/style.css
+++ b/css/style.css
@@ -873,17 +873,17 @@ ul.footer-menu li a:hover {
 }
 
 #schedule .track2margin{
-  margin: 494px 0 0 0;
+  margin: 520px 0 0 0;
   padding: 0 0;
 }
 
 #schedule .track2space1{
-  margin: 410px 0 0 0;
+  margin: 320px 0 0 0;
   padding: 0 0;
 }
 
 #schedule .track2space2{
-  margin: 480px 0 0 0;
+  margin: 350px 0 0 0;
   padding: 0 0;
 }
 
